--- a/Frontend/public/views/index.html
+++ b/Frontend/public/views/index.html
@@ -11,28 +11,32 @@
         <title>Solar System</title>
 		<script src="https://typpo.github.io/spacekit/build/spacekit.js"></script>
         <script src="/js/three.min.js"></script>
+        <link rel="stylesheet" type="text/css" href="/views/index.css">
     </head>
-    <body style= "width: 100%; height: 100%; background-color:black;">
-    	<div id="main-container" style= "width: 100%; height: 100%; background-color:black;">
-         <button id="start-button">Start</button>
-         <button id="stop-button">Stop</button>
-         <h4 style="color: white">Zoom to planet</h4>
-         <select id="zoom-dropdown">
-             <option id='sun'>Sun</option>
-             <option id='mercury'>Mercury</option>
-             <option id='venus'>Venus</option>
-             <option id='earth'>Earth</option>
-             <option id='mars'>Mars</option>
-             <option id='jupiter'>Jupiter</option>
-             <option id='saturn'>Saturn</option>
-             <option id='uranus'>Uranus</option>
-             <option id='neptune'>Neptune</option>
-             <option value="none" selected="selected">None</option>
-         </select>
-         <button id="submit-button">Submit</button>
-         <br>
-         <button id="reset-button">Reset</button>
+    <body>
+        <div id="menu">
+            <button class="vis-controls__set-date">Set Date</button>
+            <button id="start-button">Start</button>
+            <button id="stop-button">Stop</button>
+            <h4 style="color: white">Zoom to planet</h4>
+            <select id="zoom-dropdown">
+            <option id='sun'>Sun</option>
+            <option id='mercury'>Mercury</option>
+            <option id='venus'>Venus</option>
+            <option id='earth'>Earth</option>
+            <option id='mars'>Mars</option>
+            <option id='jupiter'>Jupiter</option>
+            <option id='saturn'>Saturn</option>
+            <option id='uranus'>Uranus</option>
+            <option id='neptune'>Neptune</option>
+            <option value="none" selected="selected">None</option>
+            </select>
+            <button id="submit-button">Submit</button>
+            <br>
+            <button id="reset-button">Reset</button>
         </div>
+        <div id="main-container"></div>
+        
 		<script src="/js/solarSystem.js"></script>
     </body>
 </html>
