--- a/Frontend/public/views/welcome.html
+++ b/Frontend/public/views/welcome.html
@@ -8,7 +8,7 @@
 <html>
 <head>
 	<!-- link css and js -->
-	<link rel="stylesheet" type="text/css" href="welcome.css">
+	<link rel="stylesheet" type="text/css" href="/views/welcome.css">
 	<script type="text/javascript" src="../js/welcome_fade.js"></script>
 </head>
 	<body style="background-color: #000000;">
@@ -18,10 +18,10 @@
 				fadeInEntrance(fade,15);
 			</script>
 	    	<div class="bg">
-	    		<!-- application title -->
-	    		<img src="assets/Aether.png" style="position: absolute; top: -100px; left: 0px; width: 800px; height: auto; display: block; margin-left: 30%;">
 	    		<!-- launch button -->
-	    		<a href="#" class="launchButton" style="color: #000000; margin-top: 30%; margin-left: 47%;">Launch</a>
+	    		<a href="/views/index.html" class="launchButton" style="color: #000000; margin-top: 30%; margin-left: 47%;">Launch</a>
+	    		<!-- application title -->
+	    		<img src="/views/assets/Aether.png" style="position: absolute; top: -200px; left: 0px; width: 800px; height: auto; display: block; margin-left: 30%;">
 	    	</div>
 		    
 		    
