--- a/Frontend/public/views/index.css
+++ b/Frontend/public/views/index.css
@@ -15,3 +15,38 @@ body{
 	position: relative;
 	background-color: transparent;
 }
+
+.multiselect {
+  width: 200px;
+}
+
+.selectBox {
+  position: relative;
+}
+
+.selectBox select {
+  width: 100%;
+  font-weight: bold;
+}
+
+.overSelect {
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+}
+
+#checkboxes {
+  display: none;
+  border: 1px #dadada solid;
+}
+
+#checkboxes label {
+  display: block;
+  background-color: white;
+}
+
+#checkboxes label:hover {
+  background-color: #1e90ff;
+}
