--- a/Frontend/public/views/index.css
+++ b/Frontend/public/views/index.css
@@ -5,15 +5,20 @@ body{
 }
 
 #main-container{
+  position: absolute;
+  left: 0;
+  top: 0;
 	width: 100%;
 	height: 100%;
 	padding: 0;
+  z-index: 0;
 }
 
 #menu{
 	top: 0;
 	position: relative;
 	background-color: transparent;
+  z-index: 1;
 }
 
 .multiselect {
