--- a/Frontend/public/views/index.css
+++ b/Frontend/public/views/index.css
@@ -16,13 +16,14 @@ body{
 
 #menu{
 	top: 0;
+  width: 200px;
 	position: relative;
 	background-color: transparent;
   z-index: 1;
 }
 
 .multiselect {
-  width: 200px;
+  width: 100%;
 }
 
 .selectBox {
@@ -31,7 +32,6 @@ body{
 
 .selectBox select {
   width: 100%;
-  font-weight: bold;
 }
 
 .overSelect {
@@ -44,7 +44,8 @@ body{
 
 #checkboxes {
   display: none;
-  border: 1px #dadada solid;
+  background-color: grey;
+  opacity: .9;
 }
 
 #checkboxes label {
@@ -54,4 +55,17 @@ body{
 
 #checkboxes label:hover {
   background-color: #1e90ff;
+}
+
+.slidecontainer {
+  width: 100%; /* Width of the outside container */
+}
+
+.slider {
+  -webkit-appearance: none;
+  width: 100%;
+  height: 15px;
+  border-radius: 5px;  
+  background: white;
+  outline: none;
 }
