--- a/Frontend/public/views/index.html
+++ b/Frontend/public/views/index.html
@@ -51,9 +51,54 @@
                     </select>
                     <div class="overSelect"></div>
                 </div>
-                <div id="checkboxes"></div>
+                <div id="checkboxes">
+                    <ul>
+                        <li>
+                            <label for="Sun-checkbox"><input type="checkbox" id="Sun-checkbox" >Sun</label>
+                        </li>
+                        <li>
+                            <label for="Mercury-checkbox"><input type="checkbox" id="Mercury-checkbox" >Mercury</label>
+                        </li>
+                        <li>
+                            <label for="Venus-checkbox"><input type="checkbox" id="Venus-checkbox" >Venus</label>
+                        </li>
+                        <li>
+                            <label for="Earth-checkbox"><input type="checkbox" id="Earth-checkbox" >Earth</label>
+                            <ul>
+                                <li>
+                                    <label for="Moon-checkbox"><input type="checkbox" id="Moon-checkbox">Moon</label>
+                                </li>
+                            </ul>
+                        </li>
+                        <li>
+                            <label for="Mars-checkbox"><input type="checkbox" id="Mars-checkbox" >Mars</label>
+                        </li>
+                        <li>
+                            <label for="Jupiter-checkbox"><input type="checkbox" id="Jupiter-checkbox" >Jupiter</label>
+                            <ul>
+                                <li>
+                                    <label for="Jupiter-moon-checkbox"><input type="checkbox" id="Jupiter-moon-checkbox" >Jupiter-moon</label>
+                                </li>
+                            </ul>
+                        </li>
+                        <li>
+                            <label for="Saturn-checkbox"><input type="checkbox" id="Saturn-checkbox" >Saturn</label>
+                        </li>
+                        <li>
+                            <label for="Uranus-checkbox"><input type="checkbox" id="Uranus-checkbox" >Uranus</label>
+                        </li>
+                        <li>
+                            <label for="Neptune-checkbox"><input type="checkbox" id="Neptune-checkbox" >Neptune</label>
+                        </li>
+                        <li>
+                            <label for="Pluto-checkbox"><input type="checkbox" id="Pluto-checkbox" >Pluto</label>
+                        </li>
+                        <li>
+                            <label for="Other-checkbox"><input type="checkbox" id="Other-checkbox" >Other</label>
+                        </li>
+                    </ul>
+                </div>
             </div>
-
         </div>
 
         <!-- Main 3D simulation -->
