Added trajectories to the display

--- a/Frontend/public/views/index.html
+++ b/Frontend/public/views/index.html
@@ -11,7 +11,8 @@
         <title>Solar System</title>
 		<script src="https://typpo.github.io/spacekit/build/spacekit.js"></script>
         <script src="/js/three.min.js"></script>
-        <link rel="stylesheet" type="text/css" href="/views/index.css">
+<!--         <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.2.0/gsap.min.js"></script>
+ -->        <link rel="stylesheet" type="text/css" href="/views/index.css">
     </head>
     <body>
         <!-- Main menu div -->
