--- a/Frontend/public/views/index.html
+++ b/Frontend/public/views/index.html
@@ -15,13 +15,18 @@
  -->        <link rel="stylesheet" type="text/css" href="/views/index.css">
     </head>
     <body>
+
+
+
         <!-- Main menu div -->
         <div id="menu">
+
+            
 
             <h4 style="color: white">Time Controls</h4>
             <p style="color: gray">Rate of Time</p>
             <div class="slidecontainer">
-                <input type="range" min="1" max="4" value="2" step="1" class="slider" id="time-rate">
+                <input type="range" min="1" max="5" value="3" step="1" class="slider" id="time-rate">
             </div>
             <p style="color: gray">Tail Length</p>
             <div class="slidecontainer">
@@ -65,6 +70,12 @@
 
         <!-- Main 3D simulation -->
         <div id="main-container"></div>
+
+        <div class='sim-time'>
+            <h3 id="sim_time"></h3>
+            <h4 id="sim_rate"></h4>
+        </div> 
+
         
         <script src="/js/solarSystem.js"></script>
         
