--- a/Frontend/public/views/index.html
+++ b/Frontend/public/views/index.html
@@ -21,7 +21,10 @@
         <!-- Main menu div -->
         <div id="menu">
 
-            
+            <form class="form" id="myForm" enctype="multipart/form-data">
+                Choose the file: <input type="file" name="file"/><BR>
+                    <input type="submit" value="Upload"/>
+            </form> 
 
             <h4 style="color: white">Time Controls</h4>
             <p style="color: gray">Rate of Time</p>
