--- a/Frontend/public/views/index.html
+++ b/Frontend/public/views/index.html
@@ -12,18 +12,34 @@
 		<script src="https://typpo.github.io/spacekit/build/spacekit.js"></script>
          <script>function openForm() {
               document.getElementById("form-container1").style.display = "block";
+              viz.stop();
+              if(viz1){
+                  viz1.stop();
+              }
             }
 
             function closeForm() {
               document.getElementById("form-container1").style.display = "none";
+                viz.start();
+                if(viz1){
+                    viz1.start();
+                }
             }
 
             function openForm2() {
                 document.getElementById("form-container2").style.display = "block";
+                viz.stop();
+                if(viz1){
+                    viz1.stop();
+                }
             }
 
             function closeForm2() {
                 document.getElementById("form-container2").style.display = "none";
+                viz.start();
+                if(viz1){
+                    viz1.start();
+                }
             } 
         </script>
         <script src="/js/three.min.js"></script>
@@ -133,8 +149,8 @@
                         <label for="targets" style="color: black">Targets</label>
                         <input type="text" placeholder="i.e. sun+earth+moon" name="targets" required>
 
-                        <label for="jd_start" style="color: black">Starting Julian Date</label>
-                        <input type="text" placeholder="i.e. 2451545.0" name="jd_start" required>
+                        <label for="jd_start" style="color: black">Starting Date</label>
+                        <input type="text" placeholder="i.e. 01 Jan 12:00:00 UTC" name="jd_start" required>
 
                     </div>
                     <div class="column">
@@ -145,8 +161,8 @@
                         <label for="targets2" style="color: black">Targets</label>
                         <input type="text" placeholder="i.e. sun+earth+moon" name="targets2" required>
 
-                        <label for="jd_start2" style="color: black">Starting Julian Date</label>
-                        <input type="text" placeholder="i.e. 2451545.0" name="jd_start2" required>
+                        <label for="jd_start2" style="color: black">Starting Date</label>
+                        <input type="text" placeholder="i.e. 01 Jan 12:00:00 UTC" name="jd_start2" required>
 
                         <button type="submit" class="btn" onclick="closeForm2()">Create</button>
                         <button type="button" class="btn cancel" onclick="closeForm2()">Close</button>
