Fixed bugs with create and compare sim buttons and forms

--- a/Frontend/public/views/index.html
+++ b/Frontend/public/views/index.html
@@ -128,8 +128,8 @@
                 <label for="targets" style="color: black">Targets</label>
                 <input type="text" placeholder="i.e. sun+earth+moon" name="targets" required>
 
-                <label for="jd_start" style="color: black">Starting Julian Date</label>
-                <input type="text" placeholder="i.e. 2451545.0" name="jd_start" required>
+                <label for="jd_start" style="color: black">Starting Date</label>
+                <input type="text" placeholder="i.e. 01 Jan 12:00:00 UTC" name="jd_start" required>
 
                 <button type="submit" class="btn" onclick="closeForm()">Create</button>
                 <button type="button" class="btn cancel" onclick="closeForm()">Close</button>
