--- a/Frontend/public/views/index.css
+++ b/Frontend/public/views/index.css
@@ -15,6 +15,7 @@ body{
 }
 
 
+
 #comparison1{
   position: absolute;
   left: 0;
@@ -43,7 +44,17 @@ body{
   z-index: 2;
 }
 
- {box-sizing: border-box;}
+#error-console{
+  position: absolute;
+  bottom: 10px;
+  left: 1100px;
+  width: 160px;
+  height: 110px;
+  overflow: scroll;
+  opacity: 0.7;
+}
+
+ /*{box-sizing: border-box;}*/
 
 
 /* Button used to open the contact form - fixed at the bottom of the page */
